# Fluxa

./: .env.example  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_SETUP.md  INTEGRATION_COMPLETE.md  LICENSE  OFFLINE_DETECTION.md  OFFLINE_MOBILE_FIX.md  P2P_BLUETOOTH_NFC.md  P2P_NFC_BLUETOOTH_FINAL.md  QUICK_START.md  README.md  SOLUTION_COMPLETE.md  TEST_QUICK.md  WALLET_MODULE_DOCS.md  index.html  install-frontend.ps1  install-frontend.sh  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: copilot-instructions.md
public/: sw.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: DebugNetworkStatus.tsx  Layout.tsx  Navigation.tsx  NetworkStatusBanner.tsx  SwipeBackOverlay.tsx  TransactionHistory.tsx  WalletInitializer.tsx  WalletStats.tsx
src/config/: fluxa.config.ts
src/contexts/: OnlineStatusContext.tsx
src/hooks/: useBluetoothNFC.ts  useOfflineAwareFetch.ts  useOnlineStatus.ts  useRustWallet.ts  useServiceWorkerStatus.ts  useSwipeBack.ts  useTransaction.ts  useWallet.ts
src/router/: routes.ts
src/screens/: Dashboard.tsx  P2PPaymentScreen.tsx  PaymentRadar.tsx  PaymentReceipt.tsx  TransactionInProgress.tsx  VaultScreen.tsx
src/types/: index.ts
src/utils/: fluxa.ts  tauri.ts
